==
* New features
  - uim-sh
    - Accept script file and arguments for SRFI-22 'main' procedure
      after uim-sh options
    - Add --require-module option (-r for short)
    - Add --expression option (-e for short)
    - Add --version option (-V for short)

* Fixed
  - uim Scheme library
    - Fix fullwidth middle dot in halfwidth katakana table for
      Japanese kana-keyboard

  - uim-sh
    - Fix infinite loop on a non-recoverable read error such as
      non-ASCII char in token on a non-Unicode port
    - Fix broken editline feature by SIOD dependencies
    - Fix EOF (^d) ignorance on editline feature is enabled
    - Fix ignorance of multiple expressions on a line on editline
      feature is enabled
    - Fix read error on multi-line expression such as
      "(define\nfoo\n3)" on editline feature is enabled
    - Fix pseudo -r (require module) option for editline feature with
      real require-module

Overview of changes from 1.4.0-beta to 1.4.0
==
* Fixed
  - Fix the license terms of replace/strsep.c and replace/setenv.c
    accidencially mis-modified in r790

  - libuim
    - Fix unimplemented return value of uim_input_string()
    - Fix uneffected --disable-nls

  - uim Scheme library
    - Fix lacking heap preallocation for heavy job. This makes uim-pref startup
      faster

Overview of changes from 1.4.0-alpha to 1.4.0-beta
==
* Fixed
  - XIM bridge
    - Startup error of uim-xim due to the 1.3.x-incompatible behavior of
      uim_scm_symbol_value()

  - libuim
    - Fix corrupted return value by uim_scm_return_value() after uim_scm_eval()

  - uim-sh
    - Fix broken 'uim-sh -B' error handling
    - Fix broken backtrace printing

  - Broken compilation on SPARC and IA-64 (NIIBE Yutaka)
  - Suppress warnings

Overview of changes from 1.3.x to 1.4.0-alpha
==
* New features
  - libuim
    - The modified version of SIOD interpreter has been replaced with SigScheme
      0.7.2

* Fixed