@@ -13,6 +13,10 @@ Overview of changes from 1.4.x to 1.5.0-alpha
     - Fix fullwidth middle dot in halfwidth katakana table for
       Japanese kana-keyboard
 
+  - uim-fep
+    - Fix the unupdated IM-name of the status line on IM-switching by
+      an external IM switcher
+
   - uim-sh
     - Fix infinite loop on a non-recoverable read error such as
       non-ASCII char in token on a non-Unicode port
